<resources>
    <string name="app_name">AgriStore</string>
    <string name="sell">Sell</string>
    <string name="quantity">Quantity in Stock:</string>
    <string name="quantity_req">Quantity in Stock <font color='#FF0000'>*</font></string>
    <string name="item_name_req">Item Name <font color='#FF0000'>*</font></string>
    <string name="item_price_req">Item Price <font color='#FF0000'>*</font></string>
    <string name="save_action">Save</string>
    <string name="item_detail_fragment_title">Item Details</string>
    <string name="add_fragment_title">Add Item</string>
    <string name="edit_fragment_title">Edit Item</string>
    <string name="price">Price</string>
    <string name="quantity_in_stock">Quantity\nIn Stock</string>
    <string name="item">Item</string>
    <string name="delete">Delete</string>
    <string name="delete_question">Are you sure you want to delete?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="currency_symbol">$</string>
    <string name="edit_item">Edit Item</string>
    <string name="add_new_item">Add new item</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="customer_name">Name</string>
    <string name="customer_national_number"># National</string>
    <string name="customer_tel">Tel</string>
    <string name="customer_first_name_req">Customer First Name</string>
    <string name="customer_last_name_req">Customer Last name</string>
    <string name="customer_national_number_req">Customer National number</string>
    <string name="customer_tel_req">Customer Tel</string>
    <string name="buy">Buy</string>
    <string name="customer_first_name">First Name</string>
    <string name="customer_last_name">Last Name</string>
    <string name="item_title">Title</string>
    <string name="item_quantity_label">Quantity:</string>
    <string name="item_quantity">45000</string>
    <string name="item_price">34$</string>
    <string name="item_add_action">Add</string>
    <string name="cancel">Cancel</string>
    <string name="quantity_req2"><font size="30">Quantity</font></string>
    <string name="bill_dialog_title_add">Save Bill</string>
    <string name="bill_dialog_message_add">Bill Gernerated?</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="bill_code">3245</string>
    <string name="bill_customer_name">Customer Name:</string>
    <string name="bill_customer_name_sample">Mohammad Reza Aliabadi</string>
    <string name="bill_total_price">Total:</string>
    <string name="total_price">456$</string>
    <string name="bill_item_count">Item count:</string>
    <string name="bill_detail_action">Details</string>
    <string name="item_total_price_label">Total</string>
    <string name="item_quantity_header">Count</string>
    <string name="bill_customer_national_number">3456456789</string>
    <string name="bill_customer_national_number_label"># National:</string>
    <string name="bill_customer_tel_label">Tel:</string>
    <string name="bill_customer_tel">09164351332</string>
    <string name="bill_code_label">Bill Code:</string>
    <string name="bill_price">456687$</string>
    <string name="bill_date">2022/12/3</string>
    <string name="bill_date_label">Date:</string>
    <string name="card">Card</string>
    <string name="total_price_label">Total:</string>
    <string name="bill_payment_req">Payment</string>
    <string name="bill_off_req">Off</string>
    <string name="bill_off_label">Off:</string>
    <string name="bill_payment_label">Payment:</string>
    <string name="customer_name_label">Customer Name:</string>
    <string name="customer_national_number_sample">3420987456</string>
    <string name="detail">Detail</string>
    <string name="action_bar_search">Search</string>
    <string name="item_customer_name">Customer</string>
    <string name="item_bill_code">Bill</string>
    <string name="action">Action</string>
    <string name="menu">Menu</string>
    <string name="bill">Bill</string>
    <string name="customer">Customer</string>
    <string name="margin_popup_menu_icon">1</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="item_off_req">Item Off <font color='#FF0000'>*</font></string>
    <string name="item_quantity_req">Item Quantity <font color='#FF0000'>*</font></string>
    <string name="item_description_req">Item Description <font color='#FF0000'>*</font></string>
    <string name="item_off_label">Off:</string>
    <string name="item_name">Item</string>
    <string name="item_off">Off</string>
    <string name="item_price_and_off">Price</string>
    <string name="details_action">Details</string>
    <string name="item_description">This is description.</string>
    <string name="list_item">List item</string>
    <string name="home_name">Sabz Dasht</string>
    <string name="fragment_bill_list">Bills</string>
    <string name="fragment_customer_list">Customers</string>
    <string name="fragment_add_customer">Customer</string>
    <string name="fragment_customer_detail">Customer Details</string>
    <string name="fragment_add_bill">Bill</string>
    <string name="fragment_bill_item_list">Bill</string>
    <string name="fragment_add_bill_home">Buy</string>
    <string name="fragment_add_bill_card">Card</string>
    <string name="bill_total_item_price">Total Item:</string>
</resources>